acceptance/tests/fixtures/cases/custom-api-gateway/httproute/route.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1beta1
kind: HTTPRoute
metadata:
  name: custom-route
spec: {}
